--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "my-account",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.17.3",
+    "npm": "6.14.13"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build -- prod",
+    "start": "node server.ts"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.0",
     "@angular/cdk": "^13.3.1",
+    "@angular/cli": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
+    "@angular/compiler-cli": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.1",
@@ -21,8 +28,11 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.3",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
