--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "heroku-postbuild": "ng build --prod",
-    "start": "node server.ts"
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
